[package]
name = "helloworld"
version = "1.0.0"
authors = ["Andres Almiray <aalmiray@yahoo.com>"]
description = """
HelloWorld in Rust
"""
documentation = "https://github.com/aalmiray/helloworld-rustzig-slsa"
homepage = "https://github.com/aalmiray/helloworld-rustzig-slsa"
repository = "https://github.com/aalmiray/helloworld-rustzig-slsa"
keywords = ["helloworld"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
autotests = false
